--- a/Code/PerceptronFrontEnd/src/app/app.component.html
+++ b/Code/PerceptronFrontEnd/src/app/app.component.html
@@ -125,9 +125,10 @@
         <label
           style="display:inline-block; color:#212121;  cursor:pointer;font-size:15px; font-weight:500; letter-spacing:0px; font-family: Roboto, Arial, sans-serif; padding-left:15px;">
           Search Results & History</label>
-
       </button>
 
+
+      <!-- <div style="height:10px;font-size:1px;">&nbsp;</div>
       <button matTooltip="Calculate the false discovery rate" matTooltipPosition="after" mat-button
         style="color:grey; height: 45px; width:100%; text-align:left;  font-size:large;" (click)="fdr()">
         <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -138,8 +139,7 @@
         <label
           style="display:inline-block; color:#212121;  cursor:pointer;font-size:15px; font-weight:500; letter-spacing:0px; font-family: Roboto, Arial, sans-serif;padding-left: 15px;">
           False Discovery Rate</label>
-
-      </button>
+      </button> -->
 
       <div style="height:10px;font-size:1px;">&nbsp;</div>
       <button matTooltip="Sample top-down mass spectrometry data for use with PERCEPTRON" matTooltipPosition="after"
