--- a/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
@@ -372,7 +372,18 @@
       <mat-grid-tile></mat-grid-tile>
 
       <mat-grid-tile colspan="1" rowspan="1">
-        <!-- Include Uniprot Link -->
+        <div style="padding-left:5px; width:100%">
+          <label style="font-weight:bold;">Molecular Weight Module: </label>
+        </div>
+      </mat-grid-tile>
+      <mat-grid-tile colspan="1" rowspan="1">
+        <div style="padding-left:5px; width:100%">
+          <label style="font-size:15px;" id="MWModule"></label>
+        </div>
+      </mat-grid-tile>
+
+
+      <!-- <mat-grid-tile colspan="1" rowspan="1">
         <div style="padding-left:5px; width:100%">
           <label style="font-weight:bold;">Molecular Weight Module: </label>
         </div>
@@ -381,7 +392,7 @@
         <div style="padding-left:5px; width:100%">
           N/A
         </div>
-      </mat-grid-tile>
+      </mat-grid-tile> -->
 
       <mat-grid-tile></mat-grid-tile>
 
