--- a/Code/PerceptronFrontEnd/src/app/summary-results/summary-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/summary-results/summary-results.component.html
@@ -45,7 +45,7 @@
   
         <!-- # of Modification Column -->
         <ng-container matColumnDef="mods">
-          <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> No. of Modification(s) </mat-header-cell>
+          <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> No. of PTM(s) </mat-header-cell>
           <mat-cell style="cursor: pointer; font-size:15px;" *matCellDef="let row"> {{row.mods}} </mat-cell>
         </ng-container>
   
