--- a/Code/PerceptronFrontEnd/src/app/app.component.html
+++ b/Code/PerceptronFrontEnd/src/app/app.component.html
@@ -39,10 +39,10 @@
 </mat-toolbar>
 
 <mat-sidenav-container class="example-sidenav-container" style="height:100vh;  padding-top:60px;">
-  <mat-sidenav #sidenav mode="side" opened="false" style=" background-color:#FAFAFA; padding-top:60px;">
+  <mat-sidenav #sidenav mode="side" opened="true" style=" background-color:#FAFAFA; padding-top:60px;">
     <nav>
 
-      <button matTooltip="A next-generation top-down proteoform search and identification platform"
+      <button matTooltip="Next-generation top-down proteoform search and identification platform"
         matTooltipPosition="after" mat-button
         style="color:grey; height: 45px; width:100%; text-align:left;   font-size:large;" (click)="about()">
 
@@ -61,7 +61,7 @@
       <button matTooltip="Quick guide to proteoform search and identification using PERCEPTRON"
         matTooltipPosition="after" mat-button
         style="color:grey; height: 45px; width:100%; text-align:left;   font-size:large;" (click)="getting_started()">
-        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+        <svg style="width:22px;height:22px" viewBox="0 0 22 22">
           <path fill="#000000"
             d="M2.5,19H21.5V21H2.5V19M22.07,9.64C21.86,8.84 21.03,8.36 20.23,8.58L14.92,10L8,3.57L6.09,4.08L10.23,11.25L5.26,12.58L3.29,11.04L1.84,11.43L3.66,14.59L4.43,15.92L6.03,15.5L11.34,14.07L15.69,12.91L21,11.5C21.81,11.26 22.28,10.44 22.07,9.64Z" />
         </svg>
@@ -128,18 +128,28 @@
       </button>
 
 
-      <div style="height:10px;font-size:1px;">&nbsp;</div>
+      <!-- <div style="height:10px;font-size:1px;">&nbsp;</div>
+      <button matTooltip="Interpretation of the results" matTooltipPosition="after" mat-button
+        style="color:grey; height: 45px; width:100%; text-align:left;  font-size:large;" (click)="ResultsInterpretation()">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+          <path fill="#800080"
+            d="M13.5,8H12V13L16.28,15.54L17,14.33L13.5,12.25V8M13,3A9,9 0 0,0 4,12H1L4.96,16.03L9,12H6A7,7 0 0,1 13,5A7,7 0 0,1 20,12A7,7 0 0,1 13,19C11.07,19 9.32,18.21 8.06,16.94L6.64,18.36C8.27,20 10.5,21 13,21A9,9 0 0,0 22,12A9,9 0 0,0 13,3" />
+        </svg>
+        <label
+          style="display:inline-block; color:#212121;  cursor:pointer;font-size:15px; font-weight:500; letter-spacing:0px; font-family: Roboto, Arial, sans-serif; padding-left:15px;">
+          Results Interpretation</label>
+      </button> -->
+
+
+      <!-- <div style="height:10px;font-size:1px;">&nbsp;</div>
       <button matTooltip="Calculate the false discovery rate" matTooltipPosition="after" mat-button
         style="color:grey; height: 45px; width:100%; text-align:left;  font-size:large;" (click)="fdr()">
-        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-          <path fill="#007a8a"
-            d="M16.5,12A2.5,2.5 0 0,0 19,9.5A2.5,2.5 0 0,0 16.5,7A2.5,2.5 0 0,0 14,9.5A2.5,2.5 0 0,0 16.5,12M9,11A3,3 0 0,0 12,8A3,3 0 0,0 9,5A3,3 0 0,0 6,8A3,3 0 0,0 9,11M16.5,14C14.67,14 11,14.92 11,16.75V19H22V16.75C22,14.92 18.33,14 16.5,14M9,13C6.67,13 2,14.17 2,16.5V19H9V16.75C9,15.9 9.33,14.41 11.37,13.28C10.5,13.1 9.66,13 9,13Z" />
-        </svg>
+        <img src ="assets/images/FDR.png"  width="24" height="24">
 
         <label
           style="display:inline-block; color:#212121;  cursor:pointer;font-size:15px; font-weight:500; letter-spacing:0px; font-family: Roboto, Arial, sans-serif;padding-left: 15px;">
           False Discovery Rate</label>
-      </button>
+      </button> -->
 
       <div style="height:10px;font-size:1px;">&nbsp;</div>
       <button matTooltip="Sample top-down mass spectrometry data for use with PERCEPTRON" matTooltipPosition="after"
@@ -154,7 +164,7 @@
       </button>
 
       <div style="height:10px;font-size:1px;">&nbsp;</div>
-      <button matTooltip="Get assistance with using PERCEPTRON and download manual" matTooltipPosition="after"
+      <button matTooltip="Get assistance with using PERCEPTRON and download user manual matTooltipPosition="after"
         mat-button style="color:grey;  width:100%; height: 45px; text-align:left; font-size:large;" (click)="help()">
         <svg style="width:24px;height:24px" viewBox="0 0 24 24">
           <path fill="#bafc51"
@@ -225,10 +235,7 @@
       <div style="height:10px;font-size:1px;">&nbsp;</div>
       <button matTooltip="Update/Download Protein Database" matTooltipPosition="after" mat-button
         style="color:grey; height: 45px; width:100%; text-align:left;   font-size:large;" (click)="adminpanel();" *ngIf="this.UserEmailID == 'farhan.khalid@lums.edu.pk'">
-        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-          <path fill="#717171"
-            d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" />
-        </svg>
+        <mat-icon class='iconclass' style="color: rgb(0, 60, 255);">person</mat-icon>
         <label
           style="display:inline-block;  color:#212121;cursor:pointer; font-size:15px; letter-spacing:0px; font-weight:500; font-family: Roboto, Arial, sans-serif;padding-left: 15px;">Admin Panel</label>
 
