--- a/Code/PerceptronFrontEnd/src/app/about/about.component.html
+++ b/Code/PerceptronFrontEnd/src/app/about/about.component.html
@@ -71,17 +71,17 @@
                     </ng-container>
 
                     <ng-container matColumnDef="OSWindow">
-                      <mat-header-cell *matHeaderCellDef> Windows </mat-header-cell>
+                      <mat-header-cell *matHeaderCellDef style="color: rgb(20, 20, 20); font-size: 14px; font-weight:normal"> Windows </mat-header-cell>
                       <mat-cell *matCellDef="let element"> {{element.OSWindow}} </mat-cell>
                     </ng-container>
                                    
                     <ng-container matColumnDef="OSLinux">
-                      <mat-header-cell *matHeaderCellDef> Linux(Ubuntu) </mat-header-cell>
+                      <mat-header-cell *matHeaderCellDef style="color: rgb(20, 20, 20); font-size: 14px; font-weight:normal"> Linux(Ubuntu) </mat-header-cell>
                       <mat-cell *matCellDef="let element"> {{element.OSLinux}} </mat-cell>
                     </ng-container> 
                     
                     <ng-container matColumnDef="OSMac">
-                      <mat-header-cell *matHeaderCellDef> Mac </mat-header-cell>
+                      <mat-header-cell *matHeaderCellDef style="color: rgb(20, 20, 20); font-size: 14px; font-weight:normal"> Mac </mat-header-cell>
                       <mat-cell *matCellDef="let element"> {{element.OSMac}} </mat-cell>
                     </ng-container>
                   
