--- a/Code/PerceptronFrontEnd/src/app/app.component.html
+++ b/Code/PerceptronFrontEnd/src/app/app.component.html
@@ -164,7 +164,7 @@
       </button>
 
       <div style="height:10px;font-size:1px;">&nbsp;</div>
-      <button matTooltip="Get assistance with using PERCEPTRON and download user manual matTooltipPosition="after"
+      <button matTooltip="Get assistance with using PERCEPTRON and download user manual" matTooltipPosition="after"
         mat-button style="color:grey;  width:100%; height: 45px; text-align:left; font-size:large;" (click)="help()">
         <svg style="width:24px;height:24px" viewBox="0 0 24 24">
           <path fill="#bafc51"
