--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
@@ -26,9 +26,10 @@
     <div style='text-align:right'><a style='right:0pt; font-size:10px' href ="https://creativecommons.org/licenses/by-nc/3.0/legalcode"> Courtesy By: CanvasJS.com </a></div>
   </mat-card>
 
-  <div style="height:10px;font-size:1px;">&nbsp;</div>
 
+  <div id="top" style="height:10px;font-size:1px;">&nbsp;</div> 
   <mat-card>
+    
     <h6 style="text-align:center; font-weight:bold">Matched Fragments</h6>
     <div class="example-container mat-elevation-z8"></div>
 
