--- a/Code/PerceptronFrontEnd/src/app/youtube/youtube.component.html
+++ b/Code/PerceptronFrontEnd/src/app/youtube/youtube.component.html
@@ -5,19 +5,184 @@
     <div style="height:10px;font-size:1px;">&nbsp;</div>
     <mat-card>
         <!-- <mat-card-header> -->
-            <p style="font-size:18px;">For video tutorials please visit at <a href="https://www.youtube.com/playlist?list=PLaNVq-kFOn0Z_7b-iL59M_CeV06JxEXmA">here</a></p>
-            
-            <!-- <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">GPS Cancer - Proteomics Introduction</h5> -->
+            <p style="font-size:18px; font-style: italic; font-weight: 400;">For the complete playlist, please visit <u><a href="https://www.youtube.com/playlist?list=PLaNVq-kFOn0Z_7b-iL59M_CeV06JxEXmA">here</a></u></p>
+            <mat-grid-list cols="9" rowHeight="300">
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/9jGvU_vpyEM?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="Keyboard Cat" allowfullscreen></iframe>                    
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/aGDBLO5g88k?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+            </mat-grid-list>
 
-        <!-- </mat-card-header> -->
-        <!-- <iframe style=" margin-left: auto; margin-right: auto; display: block;padding-top: 10px;" width="560" height="315" src="https://www.youtube.com/embed/OkUqfADzBPc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> 
-    </mat-card>
-    <div style="height:10px;font-size:1px;">&nbsp;</div>
-    <mat-card>
-        <mat-card-header>
-            <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">Working of Perceptron</h5>
-        </mat-card-header>
-        <iframe style=" margin-left: auto; margin-right: auto; display: block;padding-top: 10px;" width="560" height="315" src="https://www.youtube.com/embed/V6eJ5M-O60E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>  -->
+            <mat-grid-list cols="9" rowHeight="55px">
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            mzXML to MGF file format conversion
+                        </a>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            RAW to mzML file format conversion
+                        </a>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <div style="height:10px;font-size:1px;">&nbsp;</div>
+
+            <mat-grid-list cols="9" rowHeight="300">
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/OnfIY7jdWyE?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <!-- <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/oMv53VibuOg?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile> -->
+            </mat-grid-list>
+
+            <mat-grid-list cols="9" rowHeight="55px">
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            RAW to mzXML file format conversion
+                        </a>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <!-- <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Networks: Features and Functionality
+                        </a>
+                    </div>
+                </mat-grid-tile> -->
+            </mat-grid-list>
+
+            <!-- <div style="height:10px;font-size:1px;">&nbsp;</div>
+
+            <mat-grid-list cols="9" rowHeight="300">
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/vGFV0vNtvXA?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/iSGmde5fag4?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <mat-grid-list cols="9" rowHeight="55px">
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Analytics Editor and its Features
+                        </a>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Simulations Editor and Mitosis Feature
+                        </a>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <div style="height:10px;font-size:1px;">&nbsp;</div>
+
+            <mat-grid-list cols="9" rowHeight="300">
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/P6tWw7leuPE?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/2TY7iLri48E?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <mat-grid-list cols="9" rowHeight="55px">
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Simulations Editor and Cell Color Feature
+                        </a>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Organoids Editor and its Features
+                        </a>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <div style="height:10px;font-size:1px;">&nbsp;</div>
+
+            <mat-grid-list cols="9" rowHeight="300">
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/acoWwrI_f50?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/72s__JguTZg?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <mat-grid-list cols="9" rowHeight="55px">
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Features and Functionality
+                        </a>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Constructing and Validating Simple Cell Circuit
+                        </a>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <div style="height:10px;font-size:1px;">&nbsp;</div>
+
+            <mat-grid-list cols="9" rowHeight="300">
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/3N_qwt8OXL0?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/QZ_s9RpOy0I?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </mat-grid-tile>
+            </mat-grid-list>
+
+            <mat-grid-list cols="9" rowHeight="55px">
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Features and Functionality
+                        </a>
+                    </div>
+                </mat-grid-tile>
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="4">
+                    <div>
+                        <a style="font-size: 18px; color: black">
+                            Constructing and Validating Simple Cell Circuit
+                        </a>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list> -->
     </mat-card>
 </div>
 
