--- a/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
@@ -6,7 +6,7 @@
   </mat-card>
   <br>
 
-  <mat-expansion-panel>
+  <mat-expansion-panel [expanded]="true">
     <mat-expansion-panel-header style="background-color:rgba(0,0,0,.1); color:Black;">
       <mat-panel-title style="font-size:large;  color:Black;">
         User Search Parameters
