--- a/Code/PerceptronFrontEnd/src/app/help/help.component.html
+++ b/Code/PerceptronFrontEnd/src/app/help/help.component.html
@@ -5,64 +5,12 @@
                 <div style="height:10px;font-size:1px;">&nbsp;</div>
                 
                 <mat-card>
+                    <p style="font-size:20px; font-weight:600">Results Interpretation</p>
+                    <p>Text will come here.</p>
+                </mat-card>
+                <div style="height:10px; font-size:1px;">&nbsp;</div>
+                <mat-card>
                     <!-- <div style="height:10px;font-size:1px;">&nbsp;</div> -->
-
-                    <p style="font-size:18px;">For help & manual please visit at <a href="https://github.com/BIRL/PERCEPTRON/tree/master/Documentation">here</a></p>
-                    <!-- <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">Implementation Steps</h5> -->
-                    <!-- <ol>
-                        <li style="font-weight:bold; font-family: roboto, arial, sans-serif;"><a href="#link1">Create a Page</a></li>
-                        <li style="font-weight:bold; font-family: roboto, arial, sans-serif;"><a href="#link2">Developer Account</a></li>
-                        <li style="font-weight:bold; font-family: roboto, arial, sans-serif;"><a href="#link3">Select Your Tools</a></li>
-                        <li style="font-weight:bold; font-family: roboto, arial, sans-serif;"><a href="#link4">Search Data</a></li>
-                    </ol>
-                    
-                    <div style="height:10px;font-size:1px;">&nbsp;</div>
-                    <a name='link1'></a>
-                    <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;" >1. Create a Page</h5>
-                    <p>Some text here Some text here Some text here Some text here Some text here Some text here  Some text here Some text here Some text here  Some text here Some text here Some text here 
-                            Some text here Some text here Some text here 
-                            Some text here Some text here Some text here 
-                    </p>
-                    <div style="height:10px;font-size:1px;">&nbsp;</div>
-                    <hr>
-                    <div style="height:10px;font-size:1px;">&nbsp;</div>
-            
-                    <a name='link2'></a>
-                    <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">2. Developer Account</h5>
-                    <p>Some text here Some text here Some text here Some text here Some text here Some text here  Some text here Some text here Some text here  Some text here Some text here Some text here 
-                            Some text here Some text here Some text here 
-                            Some text here Some text here Some text here 
-                    </p>
-                    <ul>
-                        <li>Coffee</li>
-                        <li>Tea</li>
-                        <li>Milk</li>
-                    </ul>
-                    <div style="height:10px;font-size:1px;">&nbsp;</div>
-                    <hr>
-                    <div style="height:10px;font-size:1px;">&nbsp;</div>
-                    
-                    <a name='link3'></a>
-                    <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">3. Select Your Tools</h5>
-                    <p>Some text here Some text here Some text here Some text here Some text here Some text here  Some text here Some text here Some text here  Some text here Some text here Some text here 
-                            Some text here Some text here Some text here 
-                            Some text here Some text here Some text here 
-                    </p>
-                    <ul>
-                        <li>Coffee</li>
-                        <li>Tea</li>
-                        <li>Milk</li>
-                    </ul>
-                    <div style="height:10px;font-size:1px;">&nbsp;</div>
-                    <hr>
-                    <div style="height:10px;font-size:1px;">&nbsp;</div>
-                    
-                    <a name='link4'></a>
-                    <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">4. Search Data</h5>
-                    <p>Some text here Some text here Some text here Some text here Some text here Some text here  Some text here Some text here Some text here  Some text here Some text here Some text here 
-                            Some text here Some text here Some text here 
-                            Some text here Some text here Some text here 
-                    </p> -->
-                    
+                    <p style="font-size:16px;">For further help, download manual from <u><a style="font-style:italic" href="https://github.com/BIRL/PERCEPTRON/tree/master/Documentation">here</a></u></p>
                 </mat-card>
             </div>
